--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,11 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+
+.qrcode-img {
+  width: 300px;
+  height: 300px;
+  
+  /* Padding top 5px */
+  padding-top: 5px;
+}
